# linear_regressions

./: README.md  pyproject.toml  regression.ipynb
